--- a/templates/quote.jinja
+++ b/templates/quote.jinja
@@ -1,18 +1,18 @@
 <div class="relative my-6 p-8 bg-[#f8fafc]">
     <div class="my-6">
         <div class="flex items-center">
-            {% if quote.avatar -%}
-            <img class="w-8 h-8 rounded-full !m-0 !mr-2" src="{{ quote.avatar }}"/>
+            {% if avatar -%}
+            <img class="w-8 h-8 rounded-full !m-0 !mr-2" src="{{ avatar }}"/>
             {% endif -%}
-            {% if quote.author -%}
-            <div class="text-lg font-bold">{{ quote.author }}</div>
+            {% if author -%}
+            <div class="text-lg font-bold">{{ author }}</div>
             {% endif -%}
         </div>
-        {% if quote.bio -%}
-        <div class="text-sm text-slate-400">{{ markdown_to_html(quote.bio) | safe }}</div>
+        {% if bio -%}
+        <div class="text-sm text-slate-400">{{ markdown_to_html(bio) | safe }}</div>
         {% endif -%}
     </div>
-    <div class="prose prose-slate">{{ markdown_to_html(quote.content) | safe }}</div>
+    <div class="prose prose-slate">{{ markdown_to_html(content) | safe }}</div>
     <svg class="absolute top-8 right-8 w-10 h-10" t="1647239309441" viewBox="0 0 1024 1024" version="1.1"
         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
